Update phần sản phẩm
Hiển thị chi tiết sp thêm tên nhà sx,mã loại...
Load sản phẩm theo danh mục trong action DanhMucSanPhamPartial

--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Home/MenuPartial.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Home/MenuPartial.cshtml
@@ -29,7 +29,7 @@
                 </li>
             }
         }
-        <li><a class="color4" href="blog.html">Blog</a></li>
-        <li><a class="color6" href="contact.html">Conact</a></li>
+        <li><a class="color4" href="@Url.Action("GioiThieu","GioiThieu")">Giới Thiệu</a></li>
+        <li><a class="color6" href="@Url.Action("Index","LienHe")">Liên Hệ</a></li>
     </ul>
 </div>
