--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_AdminLayout.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_AdminLayout.cshtml
@@ -166,19 +166,19 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <h3>Featured</h3>
                 <ul>
                     <li><a href="#"><i class="chat"></i></a></li>
-                    <li><a href="@Url.Action("Index","QuanLySanPham")">Quản Lí Sản Phẩm</a></li>
+                    <li><a href="@Url.Action("Index","QuanLiSanPham")">Quản Lí Sản Phẩm</a></li>
                 </ul>
                 <ul>
                     <li><a href="#"><i class="art"></i></a></li>
-                    <li><a href="@Url.Action("NhapHang","QuanLyPhieuNhap")">Nhập Thêm Hàng</a></li>
+                    <li><a href="@Url.Action("NhapHang","QuanLiPhieuNhap")">Nhập Thêm Hàng</a></li>
                 </ul>
                 <ul>
                     <li><a href="#"><i class="user"></i></a></li>
-                    <li><a href="@Url.Action("DSSPHetHang", "QuanLyPhieuNhap")">SP Sắp Hết Hàng</a></li>
+                    <li><a href="@Url.Action("DSSPHetHang", "QuanLiPhieuNhap")">SP Sắp Hết Hàng</a></li>
                 </ul>
                 <ul>
                     <li><a href="#"><i class="fat"></i></a></li>
-                    <li><a href="@Url.Action("ChuaThanhToan", "QuanLyDonHang")">Quản Lí Đơn Hàng</a></li>
+                    <li><a href="@Url.Action("ChuaThanhToan", "QuanLiDonHang")">Quản Lí Đơn Hàng</a></li>
                 </ul>
                 <ul>
                     <li><a href="#"><i class="speed"></i></a></li>
