--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/QuanLiSanPham/TaoMoi.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/QuanLiSanPham/TaoMoi.cshtml
@@ -25,6 +25,7 @@
     <h4>SanPham</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+    <span style="color:red;">@Html.Raw(ViewBag.upload as string) <br /> @Html.Raw(ViewBag.upload1 as string) </span>
     <div class="form-group">
         @Html.LabelFor(model => model.MaSP, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -84,7 +85,6 @@
         @Html.LabelFor(model => model.HinhAnh1, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <input id="HinhAnh" name="HinhAnh" type="file" />
-            <span>@ViewBag.upload </span>
         </div>
     </div>
 
@@ -92,7 +92,6 @@
         @Html.LabelFor(model => model.HinhAnh2, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <input id="HinhAnh" name="HinhAnh" type="file" />
-            <span>@ViewBag.upload </span>
         </div>
     </div>
 
@@ -100,7 +99,6 @@
         @Html.LabelFor(model => model.HinhAnh3, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <input id="HinhAnh" name="HinhAnh" type="file" />
-            <span>@ViewBag.upload </span>
         </div>
     </div>
 
@@ -108,7 +106,6 @@
         @Html.LabelFor(model => model.HinhAnh4, htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             <input id="HinhAnh" name="HinhAnh" type="file" />
-            <span>@ViewBag.upload </span>
         </div>
     </div>
 
@@ -160,7 +157,7 @@
 
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Create" class="btn btn-danger" />
+            <input type="submit" value="Tạo Mới" class="btn btn-success" />
         </div>
     </div>
 </div>
