--- a/NguyenHoangLaptop/NguyenHoangLaptop/Content/trangweb/css/style.css
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Content/trangweb/css/style.css
@@ -1015,12 +1015,12 @@ font-weight: 100;
 }
 /*---*/
 
-a.item_add p.number{	
-	font-size: 1.1em;
-  color: #FFF;
-  text-align: center;
-  background: #EF5F21;
-  padding: 0.5em 1em;
+a.item_add p.number {
+    font-size: 1.1em;
+    color: #FFF;
+    text-align: center;
+    background: #21EF73;
+    padding: 0.5em 1em;
 }
 a.item_add p.number:hover{
 		background: #000;
