--- a/NguyenHoangLaptop/NguyenHoangLaptop/Content/trangweb/css/style.css
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Content/trangweb/css/style.css
@@ -433,15 +433,14 @@ height: 35px;
 }
 .b-from-left {
     position: relative;
-    left: -100%;
+    bottom:-100%;
     background: #7777775e;
     background-size: 100% 100%;
-    top: 0px;
     margin: 0;
     min-height: 356px;
 }
 .grid-top:hover .b-from-left{
-	left:0;
+	bottom:0px;
 }
 .grid-top{
 	position: relative;
@@ -1069,7 +1068,7 @@ p.tun{
 	color:#fff;
 	font-size:1.1em;
 	font-weight:600;
-	background:#EF5F21;
+	background:#37D877;
 	padding: 0.5em 1.5em;
 	text-transform: uppercase;
 }
