--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/TimKiem/KQTimKiem.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/TimKiem/KQTimKiem.cshtml
@@ -31,7 +31,7 @@
                             </a>
                         </div>
                         <p class="tun">@item.TenSP</p>
-                        <a href="@Url.Action("ThemGioHang", "GioHang", new { @MaSP = item.MaSP, @strUrl = Request.Url.ToString() })" class="item_add"><p class="number item_price"><i> </i>@item.DonGia.Value.ToString("#,##") VNĐ</p></a>
+                        <a href="#" class="item_add"><p class="number item_price"><i> </i>@item.DonGia.Value.ToString("#,##") VNĐ</p></a>
                         @Ajax.ActionLink("Thêm vào giỏ hàng", "ThemSanPhamGioHang", "GioHang", new { @MaSP = item.MaSP, @strUrl = Request.Url.ToString() }, new AjaxOptions { HttpMethod = "Get", UpdateTargetId = "giohang", InsertionMode = InsertionMode.Replace }, new { @class = "number item_price" })
                     </div>
                 }
