Update tính năng quản lí sản phẩm
Cho phép tải nhiều ảnh sản phẩm,chia bảng sản phẩm thành 2,giữ nguyên bảng sản phẩm chỉ giữ lại trường hình ảnh
Bảng ảnh quan hệ 1-n với bảng sản phẩm
sửa lại các phần xem sản phẩm
cấu hình đường dẫn web-config

--- a/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_ProductLayout.cshtml
+++ b/NguyenHoangLaptop/NguyenHoangLaptop/Views/Layout/_ProductLayout.cshtml
@@ -103,7 +103,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
                 <div class="col-md-4 amet-sed">
                     <h4>Thư Mới</h4>
                     <p>
-                        Để Lại Thông Để Nhận Thêm Thông Tin Ưu Đãi
+                        Để Lại Thông Tin Để Nhận Thêm Thông Tin Ưu Đãi
                     </p>
                     <form>
                         <input type="text" value="" onfocus="this.value='';" onblur="if (this.value == '') {this.value ='';}">
